--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-spring": "^9.2.3",
     "socket.io-client": "^4.1.2",
     "styled-components": "^5.3.0",
+    "use-sound": "^4.0.0",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9"
   },
